welcome.lessons.welcome.bat.bool2.LastDigit2.scala.error
lastDigit:4: error: '=' expected but ';' found.
  var z=%b
^lastDigit:5: error: '=' expected but ';' found.
  var w=%c
^lastDigit:6: error: '=' expected but ';' found.
  if (z==y) {
^